--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,6 +51,19 @@
      <string>Clear</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="finishpushButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Finish</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
